Update all methods to be asynchronous

--- a/modal/deleteModal.html
+++ b/modal/deleteModal.html
@@ -7,7 +7,7 @@
             </div>
             <div class="modal-footer spaced">
                 <button type="button" class="btn btn-secondary rounded compact" data-bs-dismiss="modal">Cancel</button>
-                <button id="delete-btn" type="button" class="btn btn-danger rounded compact" data-bs-dismiss="modal">Yes</button>
+                <button id="delete-btn" type="button" class="btn btn-danger rounded compact">Yes</button>
             </div>
         </div>
     </div>
