--- a/modal/editModal.html
+++ b/modal/editModal.html
@@ -99,7 +99,7 @@
             </div>
             <div class="modal-footer spaced">
                 <button type="button" class="btn btn-secondary rounded compact" data-bs-dismiss="modal">Cancel</button>
-                <button id="edit-btn" type="button" class="btn btn-primary rounded compact" data-bs-dismiss="modal">Save Changes</button>
+                <button id="edit-btn" type="button" class="btn btn-primary rounded compact">Save Changes</button>
             </div>
         </div>
     </div>
