--- a/landing_page.html
+++ b/landing_page.html
@@ -15,6 +15,7 @@
 	<script type="text/javascript" src="js/landing_page.js"></script>
 	<script type="text/javascript" src="js/user.js"></script>
 	<script type="text/javascript" src="js/contact.js"></script>
+	<script type="text/javascript" src="js/debounce.js"></script>
 </head>
 
 <body class="landing-body">
@@ -53,7 +54,7 @@
 
 
 			<div class="input-group mb-3">
-				<input type="text" class="form-control search-bar" placeholder="Search Query" style="max-height: 40px; border-radius: 20px">
+				<input id="search" type="text" class="form-control search-bar" placeholder="Search Query" style="max-height: 40px; border-radius: 20px">
 				<!--					<button type="button" class="btn btn-outline-secondary">All</button>-->
 				<!--					<button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">-->
 				<!--						<span class="visually-hidden">Toggle Dropdown</span>-->
