Add debounce.js and use keyup event.

--- a/landing_page.html
+++ b/landing_page.html
@@ -9,6 +9,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="js/debounce.js"></script>
 	<script type="text/javascript" src="js/contactStore.js"></script>
 	<script type="text/javascript" src="js/cookies.js"></script>
 	<script type="text/javascript" src="js/design.js"></script>
@@ -64,7 +65,10 @@
 				<!--						<li><a class="dropdown-item" href="#">Address</a></li>-->
 				<!--					</ul>-->
 			</div>
+
+			<div class="overlay"></div>
 			<ul class="list-group contacts" id="contactLanding" >
+
 				<!--Contact Group-->
 			</ul>
 		</div>
