--- a/landing_page.html
+++ b/landing_page.html
@@ -66,8 +66,12 @@
 				<!--					</ul>-->
 			</div>
 
-			<div class="overlay"></div>
-			<ul class="list-group contacts" id="contactLanding" >
+			<div class="overlay" id="load-overlay" style="display: none">
+				<div class="spinner-border text-primary" role="status">
+					<span class="sr-only"></span>
+				</div>
+			</div>
+			<ul class="list-group contacts" id="contactLanding">
 
 				<!--Contact Group-->
 			</ul>
