--- a/create_account.html
+++ b/create_account.html
@@ -7,10 +7,13 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 	<script type="text/javascript" src="js/cookies.js"></script>
 	<script type="text/javascript" src="js/design.js"></script>
 	<script type="text/javascript" src="js/create_account.js"></script>
+	<script type="text/javascript" src="js/APIUtil.js"></script>
+	<script type="text/javascript" src="js/userStore.js"></script>
 	<script type="text/javascript" src="js/user.js"></script>
 </head>
 
@@ -31,30 +34,30 @@
 				<path d="M3.5 11.5a3.5 3.5 0 1 1 3.163-5H14L15.5 8 14 9.5l-1-1-1 1-1-1-1 1-1-1-1 1H6.663a3.5 3.5 0 0 1-3.163 2zM2.5 9a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
 			</svg>
 			<h3 class="mb-3">Create Account</h3>
-			<form class="form-floating loginForm" onsubmit="return doCreateAccount()">
+			<form id="create-form" class="form-floating loginForm">
 				<div class="d-flex">
 					<div class="form-floating mb-2">
-						<input required class="form-control firstName" id="first-name" aria-describedby="emailHelp" placeholder=" " maxlength="50">
+						<input name="FirstName" required class="form-control firstName" id="first-name" aria-describedby="emailHelp" placeholder=" " maxlength="50">
 						<label for="first-name">First Name</label>
 					</div>
 					<div class="form-floating mb-2">
-						<input required class="form-control lastName" id="last-name" aria-describedby="emailHelp" placeholder=" " maxlength="50">
+						<input name="LastName" required class="form-control lastName" id="last-name" aria-describedby="emailHelp" placeholder=" " maxlength="50">
 						<label for="last-name">Last Name</label>
 					</div>
 				</div>
 				<div class="form-floating mb-2">
-					<input required class="form-control" id="user" aria-describedby="emailHelp" placeholder=" " maxlength="50">
+					<input name="Login" required class="form-control" id="user" aria-describedby="emailHelp" placeholder=" " maxlength="50">
 					<label for="user">Login</label>
 				</div>
 				<div class="form-floating mb-3">
-					<input required type="password" class="form-control" id="pass" placeholder="Password">
+					<input name="Password" required type="password" class="form-control" id="pass" placeholder="Password">
 					<label for="pass">Password</label>
 				</div>
 				<div class="form-group mb-1">
 					<button type="submit" style="width: 75%; border-radius: 24px;" class="btn btn-primary btn-lg">Create Account</button>
 				</div>
 				<div class="form-group mb-3">
-					<input type="checkbox" class="form-check-input" id="remember-me">
+					<input name="Remember" type="checkbox" class="form-check-input" id="remember-me">
 					<label class="form-check-label" for="remember-me" style="font-size: small">Remember me</label>
 				</div>
 			</form>
