--- a/landing_page.html
+++ b/landing_page.html
@@ -40,7 +40,7 @@
 	</div>
 
 	<!--Contacts-->
-	<div class="d-flex" style="justify-items: left; width: 100%; flex: 1 1 auto; overflow: auto;">
+	<div class="contact-list-card">
 		<div class="p-3 beveledBox contact-list-display">
 			<div class="contact-header">
 				<h1 style="text-align: left">Contacts</h1>
