--- a/landing_page.html
+++ b/landing_page.html
@@ -1,17 +1,8 @@
 <html>
 <head>
-	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-	<meta content="utf-8" http-equiv="encoding">
 	<title>Contactical</title>
-	<link href="css/styles.css" rel="stylesheet">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script src="js/debounce.js"></script>
-	<script type="text/javascript" src="js/cookies.js"></script>
-	<script type="text/javascript" src="js/design.js"></script>
+	<?php include "head.html" ?>
+	<script type="text/javascript" src="js/debounce.js"></script>
 	<script type="text/javascript" src="js/landing_page.js"></script>
 	<script type="text/javascript" src="js/user.js"></script>
 	<script type="text/javascript" src="js/contactStore.js"></script>
@@ -82,7 +73,7 @@
 			<div class="d-flex" id="notificationLanding" style="justify-content: center;"></div>
 			<div class="d-flex" style="align-items: center">
 				<!-- New Modal -->
-				<div id="new-modal-prop"></div>
+				<?php include "modal/createModal.html"?>
 			</div>
 			<div>
 				<div class="contact-info-header">
@@ -111,8 +102,10 @@
 
 			<!-- Data -->
 			<div class="contact-data">
-				<div id="edit-modal-prop"></div>
-				<div id="delete-modal-prop"></div>
+				<!-- Include Modals -->
+				<?php include "modal/deleteModal.html"?>
+				<?php include "modal/editModal.html"?>
+
 				<div class="info-pane">
 					<div id="info-pane" class="contact-info">
 						<div class="profile-icon enlarged d-flex justify-content-center align-self-center mt-5" data-contact-key="Initials" data-contact-target="#info-initials">
