Primitive php image uploading API

--- a/modal/editModal.html
+++ b/modal/editModal.html
@@ -13,11 +13,11 @@
                 <!--Info-->
                 <div class="info">
                     <form id="edit-form" class="row g-3">
-                        <div class="profile-icon enlarged d-flex justify-content-center align-self-center mt-5" data-contact-key="Initials" data-contact-target="#info-initials">
+                        <div id="drop-area" class="profile-icon enlarged d-flex justify-content-center align-self-center mt-5" data-contact-key="Initials" data-contact-target="#info-initials">
                             <div class="align-self-center" style="width: 100%;">
                                 <h3 class="profile-ab enlarged" id="info-initials" style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">NC</h3>
                             </div>
-                            <input id="img-upload" type="image">
+                            <input id="img-upload" type="file" alt="" placeholder="" style="display: none">
                         </div>
                         <div class="col-md-4" data-contact-key="FirstName" data-contact-target="#edit-first-name">
                             <label for="edit-first-name" class="form-label">First Name</label>
