Add edit form prepopulation

--- a/modal/editModal.html
+++ b/modal/editModal.html
@@ -13,10 +13,8 @@
                 <!--Info-->
                 <div class="info">
                     <form id="edit-form" class="row g-3">
-                        <div id="drop-area" class="profile-icon enlarged d-flex justify-content-center align-self-center mt-5" data-contact-key="Initials" data-contact-target="#edit-info-initials">
-                            <div class="align-self-center" style="width: 100%;">
-                                <h3 class="profile-ab enlarged" id="edit-info-initials" style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">NC</h3>
-                            </div>
+                        <div id="drop-area" class="col-md-4 profile-icon enlarged d-flex justify-content-center align-self-center mt-5" data-contact-key="Initials" data-contact-target="#edit-info-initials">
+                            <h3 class="profile-ab enlarged" id="edit-info-initials" style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">NC</h3>
                             <input id="img-upload" type="file" alt="" placeholder="" style="display: none">
                         </div>
                         <div class="col-md-4" data-contact-key="FirstName" data-contact-target="#edit-first-name">
@@ -31,7 +29,7 @@
                             <label for="edit-phone-number" class="form-label">Phone Number</label>
                             <input name="PhoneNumber" type="text" class="form-control" id="edit-phone-number" maxlength="50">
                         </div>
-                        <div class="col-8" data-contact-key="Address" data-contact-target="#edit-address">
+                        <div class="col-4" data-contact-key="Address" data-contact-target="#edit-address">
                             <label for="edit-address" class="form-label">Address</label>
                             <input name="Address" type="text" class="form-control" id="edit-address"  maxlength="75">
                         </div>
