--- a/landing_page.html
+++ b/landing_page.html
@@ -110,6 +110,7 @@
 					<div id="info-pane" class="contact-info">
 						<div class="profile-icon enlarged d-flex justify-content-center align-self-center mt-5" data-contact-key="Initials" data-contact-target="#info-initials">
 							<div id="contact-profile-container" class="align-self-center" style="width: 100%;">
+								<img class="profile-img enlarged" style="display: none">
 								<h3 class="profile-ab enlarged" id="info-initials" style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">NC</h3>
 							</div>
 						</div>
