--- a/landing_page.html
+++ b/landing_page.html
@@ -35,11 +35,9 @@
 		<div class="p-3 beveledBox contact-list-display">
 			<div class="contact-header">
 				<h1 style="text-align: left">Contacts</h1>
-				<button data-bs-toggle="modal" data-bs-target="#newModal" type="button" class="btn btn-primary add-button">
-					<svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16" style="padding: 0">
-						<path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-					</svg>
-					<h5 class="mb-0">Add</h5>
+				<button data-bs-toggle="modal" data-bs-target="#newModal" type="button" class="btn btn-primary rounded icon-btn" style="font-size: 1.25rem">
+					<i class="bi bi-plus standard-icon"></i>
+					Add
 				</button>
 			</div>
 
@@ -78,21 +76,16 @@
 			<div>
 				<div class="contact-info-header">
 					<h1>Contact Info</h1>
-					<div>
-						<button class="btn btn-primary rounded" data-bs-toggle="modal" data-bs-target="#editModal">
+					<div class="btn-group btn-group-lg rounded">
+						<button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editModal">
 							<div class="d-flex align-items-center">
-								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
-									<path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-									<path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
-								</svg>
+								<i class="bi bi-pencil-square"></i>
 								<h5 style="margin: 0; padding-left: 5px;">Edit</h5>
 							</div>
 						</button>
-						<button class="btn btn-danger rounded" data-bs-toggle="modal" data-bs-target="#deleteModal">
+						<button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">
 							<div class="d-flex align-items-center">
-								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
-									<path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
-								</svg>
+								<i class="bi bi-trash-fill"></i>
 								<h5 style="margin: 0; padding-left: 5px;">Delete</h5>
 							</div>
 						</button>
