--- a/landing_page.html
+++ b/landing_page.html
@@ -15,7 +15,7 @@
 	<div class="p-1 beveledBox mb-3" style="width: 100%; min-width: 60px;">
 		<nav class="navbar navbar-expand-lg navbar-light">
 			<div class="container-fluid">
-				<div style="font-size: 30px;">
+				<div class="logo" style="font-size: 30px;">
 					<img src="/android-chrome-512x512.png" alt="Contactical Logo" width="40" height="40" class="d-inline-block align-top" style="margin-right: -3px;">
 					ontactical
 				</div>
