--- a/modal/editModal.html
+++ b/modal/editModal.html
@@ -13,7 +13,7 @@
                 <!--Info-->
                 <div class="info">
                     <form id="edit-form" class="row g-3">
-                        <div id="drop-area" class="col-md-4 profile-icon enlarged d-flex justify-content-center align-self-center mt-5" data-contact-key="Initials" data-contact-target="#edit-info-initials">
+                        <div id="drop-area" class="col-md-4 profile-icon enlarged d-flex justify-content-center align-self-center" data-contact-key="Initials" data-contact-target="#edit-info-initials">
                             <h3 class="profile-ab enlarged" id="edit-info-initials" style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">NC</h3>
                             <img id="edit-profile-img" class="profile-img enlarged" style="display: none">
                             <input id="img-upload" type="file" alt="" placeholder="" style="display: none">
