--- a/create_account.html
+++ b/create_account.html
@@ -2,10 +2,7 @@
 <head>
 	<title>Contactical</title>
 	<?php include "head.html"?>
-	<script type="text/javascript" src="js/create_account.js"></script>
-	<script type="text/javascript" src="js/APIUtil.js"></script>
-	<script type="text/javascript" src="js/userStore.js"></script>
-	<script type="text/javascript" src="js/user.js"></script>
+	<script type="module" src="js/create_account.js"></script>
 </head>
 
 <body class="d-flex align-items-center text-center" style="background-color: cornflowerblue; height: 100%;">
