--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <head>
 	<title>Contactical</title>
 	<?php include 'head.html'; ?>
-	<script type="text/javascript" src="js/index.js"></script>
-	<script type="text/javascript" src="js/APIUtil.js"></script>
-	<script type="text/javascript" src="js/userStore.js"></script>
-	<script type="text/javascript" src="js/user.js"></script>
+	<script type="module" src="js/index.js"></script>
 </head>
 
 <body class="d-flex align-items-center text-center" style="background-color: cornflowerblue; height: 100%;">
