--- a/landing_page.html
+++ b/landing_page.html
@@ -2,12 +2,7 @@
 <head>
 	<title>Contactical</title>
 	<?php include "head.html" ?>
-	<script type="text/javascript" src="js/APIUtil.js"></script>
-	<script type="text/javascript" src="js/debounce.js"></script>
-	<script type="text/javascript" src="js/landing_page.js"></script>
-	<script type="text/javascript" src="js/user.js"></script>
-	<script type="text/javascript" src="js/contactStore.js"></script>
-	<script type="text/javascript" src="js/contact.js"></script>
+	<script type="module" src="js/landing_page.js"></script>
 </head>
 
 <body class="landing-body">
@@ -26,7 +21,7 @@
 				<div>
 					<p id="welcome" style="font-size:medium;"></p>
 					<div style="margin-top: -20px; text-align: right;">
-						<a href="javascript:doLogout()">Logout</a>
+						<a id="logout-link" href="#">Logout</a>
 					</div>
 				</div>
 			</div>
